# labs_technopark_c

./: CMakeLists.txt  README.md
.github/workflows/: lab_01.yml  main.yml
linters/: run.sh
project/inc/: errors.h  mail.h
project/src/: mail.c  main.c
tests/: mail_test.cpp
